# ParallelFusion

./: .gitignore  .gitsubmodules  CMakeLists.txt  ProposalGenerator.h  README.md
BaseTest/: BaseDataStructures.h  CMakeLists.txt  FusionSolver.h  FusionThread.cpp  FusionThread.h  LabelSpace.cpp  LabelSpace.h  ParallelFusionPipeline.cpp  ParallelFusionPipeline.h  ProposalGenerator.h  SegmentationFusionSolver.cpp  SegmentationFusionSolver.h  SegmentationProposalGenerator.h  main.cpp
LayerDepthMap/: BSplineSurface.h  BinaryProposalDesigner.cpp  BinaryProposalDesigner.h  CMakeLists.txt  ConcaveHullFinder.cpp  ConcaveHullFinder.h  DataStructure.h  LayerDepthRepresenter.cpp  LayerDepthRepresenter.h  LayerLabelSpace.cpp  LayerLabelSpace.h  ProposalDesigner.cpp  ProposalDesigner.h  Segment.cpp  Segment.h  StructureFinder.cpp  TRWSFusion.cpp  TRWSFusion.h  main.cpp  utils.cpp  utils.h
LayerDepthMap/Statistics/: bopt_1.csv  bopt_2.csv  bopt_3.csv  bopt_4.csv  bopt_5.csv  convertValues.m  fusion_move_1.csv  fusion_move_2.csv  fusion_move_3.csv  fusion_move_4.csv  fusion_move_5.csv  grid_1.csv  grid_2.csv  grid_3.csv  grid_4.csv  grid_5.csv  output_full  output_full_15_3  output_full_2_2  output_full_4_3  output_full_5_3  output_full_7_3  output_full_9_3  output_full_thread_1  output_full_thread_2  output_full_thread_3  output_full_thread_8  output_multiway  output_multiway_11  output_multiway_5  output_multiway_7  output_multiway_9  output_sequential  output_solution_exchange  output_values_Victor  output_values_full  output_values_full_15_3  output_values_full_2_2  output_values_full_4_3  output_values_full_5_3  (+45 more)
LayerDepthMap/Statistics/Binary/: Statistics_LayerDepthMapBinary.txt  convertValues.m  output_2_2  output_3_1  output_Victor  output_Victor_with_monitor  output_multiway  output_sequential  output_solution_exchange  output_values  readNumbers.sh
LayerDepthMap/Statistics/backup_1/: Statistics_LayerDepthMap.txt  output_Victor  output_Victor_asynchronous  output_sequential_fixed_order  output_sequential_random_order  output_solution_exchange
LayerDepthMap/Statistics/backup_2/: output_Victor  output_full  output_multiway  output_sequential  output_solution_exchange  output_solution_exchange_binary_fusion
LayerDepthMap/Statistics/backup_3/: output_Victor  output_full  output_multiway  output_sequential  output_solution_exchange
LayerDepthMap/Statistics/backup_4/: output_Victor  output_full  (+2 more)
OpticalFlow/: CMakeLists.txt  NearestNeighborsCalculation.cpp  OpticalFlowCalculation.cpp  OpticalFlowCalculation.h  OpticalFlowFusionSolver.cpp  OpticalFlowFusionSolver.h  OpticalFlowProposalGenerator.cpp  OpticalFlowProposalGenerator.h  OpticalFlowUtils.cpp  OpticalFlowUtils.h  main.cpp  run_comparison_methods.sh  run_comparison_threads.sh
OpticalFlow/Statistics/: bopt_1.csv  bopt_2.csv  bopt_3.csv  bopt_4.csv  bopt_5.csv  convertValues.m  fusion_move_1.csv  fusion_move_2.csv  fusion_move_3.csv  fusion_move_4.csv  fusion_move_5.csv  grid_1.csv  grid_2.csv  grid_3.csv  grid_4.csv  grid_5.csv  output_Victor  output_full  output_full_thread_1  output_full_thread_2  output_full_thread_8  output_multiway  output_sequential  output_solution_exchange  output_solution_exchange_1_other  output_solution_exchange_2  output_solution_exchange_2_other  output_solution_exchange_3_other  output_solution_exchange_4  output_solution_exchange_5  output_solution_exchange_9  output_thread_2  output_thread_3  output_thread_8  output_values_Victor  output_values_full  output_values_full_thread_1  output_values_full_thread_2  output_values_full_thread_8  output_values_hierarchy  (+44 more)
OpticalFlow/TRW_S/: MRFEnergy.h  minimize.def
OpticalFlow/log/: OpticalFlow.INFO  OpticalFlow.chenliu-G10AJ.chenliu.log.FATAL.20160310-151146.2827  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-112909.20402  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-121130.20707  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-122224.20989  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-123111.21067  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-124107.21211  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-125641.21479  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-131323.21567  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-132802.21792  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-134959.21915  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-141401.22131  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-141422.22144  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-142058.2257  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-145707.2583  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-151140.2827  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-151312.2870  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-152201.2991  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-154657.3253  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-155838.3381  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-162502.4377  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-163122.4505  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-165012.4905  OpticalFlow.chenliu-G10AJ.chenliu.log.INFO.20160310-171606.5096
ToyExample/: CMakeLists.txt  SegmentationFusionSolver.cpp  SegmentationFusionSolver.h  SegmentationProposalGenerator.cpp  SegmentationProposalGenerator.h  main.cpp
base/: BaseDataStructures.h  CMakeLists.txt  DataStructures.h  FusionSolver.h  FusionThread.cpp  FusionThread.h  HFusionPipeline.h  LabelSpace.cpp  LabelSpace.h  LabelSpaceBase.h  MasterFusionThread.cpp  MasterFusionThread.h  ParallelFusionPipeline.cpp  ParallelFusionPipeline.h  ProposalGenerator.h  SlaveFusionThread.cpp  SlaveFusionThread.h  basetest.cpp  binaryTree.h  pipeline_util.h
base/cv_utils/: CMakeCache.txt  CMakeLists.txt  CommonOperations.cpp  ImageMask.cpp  ImageOperations.cpp  Makefile  cmake_install.cmake  cv_utils.h
stereo/: CMakeLists.txt
stereo/code/: plotEnergy.m
stereo/scestereo/: CMakeLists.txt  scestereo.cpp  scestereo.h  scestereo_cli.cpp
stereo/surfaceStereo/: CMakeLists.txt
(+202 files in other folders)
